@@ -1,3 +1,9 @@
+2008-09-17  Tor Arne Vestbø  <tavestbo@trolltech.com>
+
+        Fix the QtWebKit/Mac build
+
+        * platform/qt/ScrollViewQt.cpp: add include
+
 \2008-09-17  David Hyatt  <hyatt@apple.com>
 
         Add a #define to control whether or not to use an NSScroller on Mac.
